Fix CSS problem that collapsed the reader's height to 0px

--- a/www/static/css/foliate.css
+++ b/www/static/css/foliate.css
@@ -16,7 +16,8 @@
 }
 
 foliate-view {
-    display: inline-block;
+    display: block;
+    height: 100%;
 }
 
 main {
